--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
+    "@vis.gl/react-google-maps": "^1.1.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.0",
     "firebase": "^10.13.1",
+    "google-map-react": "^2.2.1",
     "lucide-react": "^0.437.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
